# proprio

./: .gitignore  AGENTS.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  catalog.json  plugin.json  pyproject.toml
.github/workflows/: ci.yml  openflexure-release.yml
artifacts/demo/: proprio-openflexure-flagship.json  proprio-openflexure-legacy-source.md
artifacts/evidence/: manifest.json
artifacts/evidence/composition/: summary.json
artifacts/evidence/confirmatory-metrology/: cases.jsonl  manual-inspection.md  summary.json
artifacts/evidence/confirmatory-replay/: summary.json
artifacts/evidence/engineering-burden/: summary.json
artifacts/evidence/evolution-replay/: summary.json
artifacts/evidence/generalization-v0.3/: manual-inspection.md  run-stop.json
artifacts/evidence/metrology/: artifact-manifest.json  manual-inspection.md  metrology-preregistration.yaml  report.md  roc.json  summary.json
artifacts/evidence/procedural/: aborted_plan.raw.jsonl  dropped_frame.raw.jsonl  motor_stall.raw.jsonl  none.raw.jsonl  summary.json  timeout.raw.jsonl  unreachable_setpoint.raw.jsonl
artifacts/evidence/skill-admission/: summary.json
artifacts/evidence/skill-library/: summary.json
artifacts/evidence/studies/: README.md  causal-synthesis.json  confirmatory.json  diagnostic-history-repair.json  evolution.json  heldout-preflight.json  independent-review.json  microscopy-metrology.json  provider-hold.json
artifacts/evidence/support/: battery.jsonl  report.md  summary.json
artifacts/evidence/xrd-live/: summary.json
artifacts/invalidated/adaptive-microscopy-absolute-focus-calibration/: STATUS.md  invalid-000.json  invalid-001.json  invalid-002.json  invalid-003.json  invalid-004.json  invalid-005.json  invalid-006.json  invalid-007.json  invalid-008.json  invalid-009.json  invalid-010.json  invalid-011.json  invalid-012.json  invalid-013.json  invalid-014.json  invalid-015.json  invalid-016.json  invalid-017.json  invalid-018.json  invalid-019.json  summary.json  valid-000.json  valid-001.json  valid-002.json  valid-003.json  valid-004.json  valid-005.json  valid-006.json  valid-007.json  valid-008.json  valid-009.json  valid-010.json  valid-011.json  valid-012.json  valid-013.json  valid-014.json  valid-015.json  valid-016.json  valid-017.json  (+2 more)
cassettes/cross-family/: run-manifest.json  summary.json
cassettes/dsv4/: correct.json  legacy.json
cassettes/dsv4-evolution/: health.json  report.md
cassettes/dsv4-skill-evolution/: health.json  report.md  summary.json
cassettes/generalization-v0.3-binding/: run-manifest.json  summary.json
cassettes/independent-review/: manual-inspection.md
cassettes/judge-calibration-diagnostic/: README.md
cassettes/judge-metrology-confirmatory/: summary.json
cassettes/judge-metrology-dsv4/: summary.json
cassettes/microscopy-evolution/: evolution.json  locked-validation.json  parent.json  repair.json  review.json  selection-seal.json  summary.json
cassettes/replication-dsv4/: manual-inspection.md  summary.json
docs/: handoff.md  instrument-providers.md  matterix-adapter.md  prior-art-claim-cards.md  protocol-amendments.md  release-status.md  research-agenda.md  technical-note.md  technical-report.md
public/: proprio-demo.json
schemas/: skill.schema.json
skills/2d-flake-search/: SKILL.md
skills/absorbance-plate-read/: SKILL.md
skills/calibrated-pump-dose/: SKILL.md
skills/clslab-light-spectrometer/: SKILL.md
skills/dual-pump-blend/: SKILL.md
skills/fluorescence-plate-read/: SKILL.md
skills/helao-gamry-cv/: SKILL.md
skills/isothermal-hold/: SKILL.md
skills/keithley-2450-measure-current/: SKILL.md
skills/north-pipette-calibration/: SKILL.md
skills/openflexure-adaptive-autofocus/: SKILL.md
skills/thermal-cycle/: SKILL.md
skills/xrd-operate-observe/: SKILL.md
skills/xrd-reference/: SKILL.md
sources/keithley-2450/: driver-contract.md  fixture-correct.md  fixture-wrong-range.md
src/proprio/: __init__.py  adaptive_agent.py  adaptive_microscopy.py  adaptive_microscopy_metrology.py  adaptive_microscopy_study.py  adaptive_microscopy_verifier.py  adaptive_search.py  adaptive_validation.py  agent.py  agent_runtime.py  agent_smoke.py  artifacts.py  builtin_providers.py  catalog.py  causal_evidence.py  cli.py  confirmatory_instruments.py  confirmatory_metrology.py  confirmatory_qualification.py  confirmatory_skills.py  confirmatory_study.py  confirmatory_validation.py  confirmatory_verifiers.py  cross_family.py  engineering_burden.py  external_instruments.py  flagship_demo.py  flake_search_simulator.py  flake_search_types.py  flake_search_verifier.py  generalization_instruments.py  generalization_method.py  generalization_study.py  generalization_v04.py  heldout_preflight.py  history_repair.py  independent_review.py  instrument_agent.py  instrument_metrology.py  instrument_plugins.py  (+43 more)
tests/: test_adaptive_agent.py  test_adaptive_microscopy.py  test_adaptive_microscopy_metrology.py  test_adaptive_microscopy_study.py  test_adaptive_search.py  test_adaptive_skill.py  test_adaptive_validation.py  test_agent.py  test_agent_smoke.py  test_catalog.py  test_causal_evidence.py  test_confirmatory_instruments.py  test_confirmatory_study.py  test_cross_family.py  test_data_scope.py  test_docs.py  test_engineering_burden.py  test_expanded_evidence.py  test_external_instruments.py  test_flagship_demo.py  test_flake_search_provider.py  test_flake_search_simulator.py  test_flake_search_verifier.py  test_generalization_instruments.py  test_generalization_method.py  test_generalization_study.py  test_generalization_v04.py  test_held_out_instruments.py  test_heldout_preflight.py  test_heldout_preregistration.py  test_independent_review.py  test_instrument_agent.py  test_instrument_metrology.py  test_instrument_plugins.py  test_instrument_study.py  test_interface.py  test_judge_metrology.py  test_locked_validation.py  test_method_freeze.py  test_metrology.py  (+23 more)
tests/fixtures/synthetic_provider/: pyproject.toml
tests/fixtures/synthetic_provider/src/synthetic_provider/: __init__.py  source.md
(+2497 files in other folders)
