[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "proprio"
version = "0.5.0"
description = "Simulator-verified skill acquisition for scientific instruments."
readme = "README.md"
requires-python = ">=3.12,<3.14"
license = { text = "Apache-2.0" }
authors = [{ name = "Dynamical Systems" }]
keywords = [
  "bluesky",
  "digital-twin",
  "instrument-control",
  "skill-acquisition",
  "x-ray-diffraction",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering",
]
dependencies = [
  "bluesky>=1.13",
  "numpy>=2.1",
  "openai>=1.60",
  "ophyd>=1.10",
  "pydantic>=2.10",
  "pyfai>=2025.3",
  "pyvisa>=1.14",
  "pyvisa-sim>=0.7",
  "pyyaml>=6.0",
  "scipy>=1.14",
]

[project.urls]
Homepage = "https://github.com/Dynamical-Systems-Research/proprio"
Repository = "https://github.com/Dynamical-Systems-Research/proprio"
Documentation = "https://github.com/Dynamical-Systems-Research/proprio#readme"
Issues = "https://github.com/Dynamical-Systems-Research/proprio/issues"

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-cov>=6.0",
  "ruff>=0.11",
]
openflexure = [
  "labthings-fastapi>=0.2.1",
  "pillow>=10.4",
]
simulators = [
  "numba>=0.61",
  "pandas>=2.2",
  "scikit-learn>=1.6",
  "similaritymeasures>=1.3",
  "paho-mqtt>=2.1",
  "pyserial>=3.5",
  "requests>=2.32",
]
[project.scripts]
proprio = "proprio.cli:main"

[project.entry-points."proprio.instrument_providers"]
"proprio.external_reference" = "proprio.builtin_providers:external_reference_provider"
"proprio.flake_search" = "proprio.builtin_providers:flake_search_provider"
"proprio.keithley" = "proprio.builtin_providers:keithley_provider"
"proprio.openflexure" = "proprio.builtin_providers:openflexure_provider"
"proprio.reduced_order" = "proprio.builtin_providers:reduced_order_provider"
"proprio.xrd" = "proprio.builtin_providers:xrd_provider"

[tool.hatch.build.targets.wheel]
packages = ["src/proprio"]

[tool.hatch.build.targets.wheel.force-include]
"sources" = "proprio/sources"
"skills" = "proprio/skills"

[tool.pytest.ini_options]
addopts = "-ra --strict-config --strict-markers"
testpaths = ["tests"]

[tool.ruff]
extend-exclude = [
    "artifacts/**",
    "skills/**",
    # These verifier sources are byte-bound to the registered OpenFlexure run.
    "src/proprio/adaptive_microscopy_verifier.py",
    "src/proprio/microscopy_verifier.py",
]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
